--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "sourceMap": false, //用于debug
         "rootDir": "./src", //仅用来控制输出的目录结构--outDir。
         "outDir": "./dist", //重定向输出目录。
-        "watch": true, //在监视模式下运行编译器。会监视输出文件，在它们改变时重新编译。
+        "watch": false, //在监视模式下运行编译器。会监视输出文件，在它们改变时重新编译。
         "allowSyntheticDefaultImports": false,
         // "baseUrl": ".",
         // "paths": {
