--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "description": "基于http-api、cq-websocket、cq-robot的酷Q机器人封装",
     "main": "index.js",
     "scripts": {
-        "build": "tsc && gulp copy",
-        "dev": "tsc -w",
+        "build": "rimraf dist && tsc && gulp copy",
+        "dev": "gulp copy && tsc -w",
         "lint": "eslint src --ext .ts",
         "lint:fix": "eslint src --fix",
         "lint:create": "eslint --init",
-        "test": "mocha -r ts-node/register test/**/*.test.ts -R nyan"
+        "test": "mocha -r ts-node/register test/**/*.test.ts -R nyan",
+        "uninstall": "rimraf node_modules"
     },
     "author": "CaoMeiYouRen",
     "license": "ISC",
     "dependencies": {
-        "cq-robot": "^0.3.0",
+        "cq-robot": "^0.5.0",
         "cq-websocket": "^2.0.1",
         "got": "^9.6.0",
         "json5": "^2.1.0",
