--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
+    "rimraf": "^2.6.3",
     "should": "^13.2.3",
     "typescript": "^3.5.2",
     "typescript-eslint-parser": "^22.0.0"
