refactor: 修复了package文件中协议的问题，统一为MIT

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "cglog": "conventional-changelog -p angular -i CHANGELOG.md -s -p"
     },
     "author": "CaoMeiYouRen",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "cq-robot": "^1",
         "cq-websocket": "^2.0.2",
