refactor: 修改了换行符风格

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 #换行符
-end_of_line = crlf
+end_of_line = lf
 #插入最终换行符
 insert_final_newline = false
 #修剪尾随空格
