--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "rootDir": "./src", //仅用来控制输出的目录结构--outDir。
         "outDir": "./dist", //重定向输出目录。
         "watch": false, //在监视模式下运行编译器。会监视输出文件，在它们改变时重新编译。
-        "allowSyntheticDefaultImports": false,
+        "allowSyntheticDefaultImports": false
         // "baseUrl": ".",
         // "paths": {
         //     "@*": [
